[package]
name = "test_pyo3"
version = "0.1.0"
authors = ["Yulia Markelova <markelova.y@digdes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
# uuid
uuid = { version = "0.8.1", features = ["serde", "v4"] }


[lib]
name = "rust_force"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]